--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint-fix": "eslint . --fix"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
@@ -20,6 +21,7 @@
     "react-native": "0.63.4",
     "react-native-flash-message": "^0.1.18",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.1.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
