--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+MYAPP_UPLOAD_STORE_FILE=my-doctor-app.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-doctor-app
+MYAPP_UPLOAD_STORE_PASSWORD=D1ckyKhu$na
+MYAPP_UPLOAD_KEY_PASSWORD=D1ckyKhu$na
